@@ -1,2 +1,2 @@
 junit.jar=/home/necro/javabox/junit3.8.1/junit.jar
-triplea.version=0_4_9
+triplea.version=0_5_1
