@@ -84,7 +84,7 @@ public class TripleA implements IGameLoader
 	    */
             String mapDir = game.getData().getProperties().get(Constants.MAP_NAME).toString();
 
-            MapData.setMapDir(mapDir);          //tells TerritoryData where the txt files are
+            MapData.setMapDir(mapDir);                //tells TerritoryData where the txt files are
             TerritoryImageFactory.setMapDir(mapDir);  //tells the image factory where the images are
 
             final TripleAFrame frame = new TripleAFrame(game, players);
